As a user i can filter the task [delivers #183509733]

--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
                                 <div class="col s6">
                                     <input type="submit" class="btn">
                                 </div>
+                                <div class="col s12">
+                                    <input type="text" id="filter">
+                                    <label for="filter">filter</label>
+                                </div>
                             </div>
                         </form>
                     </div>
